[gd_scene load_steps=2 format=3 uid="uid://blfn57oc8gv6p"]

[ext_resource type="Script" path="res://globals/SoundManager.gd" id="1_t04y0"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_t04y0")

[node name="SFXAudioPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="MusicAudioPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="BgAudioPlayer" type="AudioStreamPlayer2D" parent="."]
